# Rac-Rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  rac_rest.toml
apps/rac_protocol/: Cargo.toml
apps/rac_protocol/src/: client.rs  codec.rs  error.rs  lib.rs  main.rs  metadata.rs
apps/rac_protocol/src/client/: debug.rs  handshake.rs  mod.rs  protocol.rs  transport.rs
apps/rac_protocol/src/client/request_schema/: cluster.rs
apps/rac_protocol/src/commands/: agent.rs  agent_generated.rs  auth.rs  cluster.rs  cluster_generated.rs  connection.rs  connection_generated.rs  counter.rs  counter_generated.rs  infobase.rs  infobase_generated.rs  limit.rs  limit_generated.rs  lock.rs  lock_generated.rs  manager.rs  manager_generated.rs  mod.rs  process.rs  process_generated.rs  profile.rs  profile_generated.rs  record_cursor.rs  rule.rs  rule_generated.rs  server.rs  server_generated.rs  service_setting.rs  service_setting_generated.rs  session.rs  session_generated.rs
apps/rac_protocol/src/protocol/: mod.rs
apps/rac_protocol/src/rac_wire/: consts.rs  format.rs  frame.rs  mod.rs  parse.rs  rpc.rs  rpc_header.rs  swp.rs  types.rs
apps/rac_protocol/src/rest/: mod.rs
apps/rac_protocol/src/rpc/: decode_utils.rs  mod.rs
apps/rac_protocol/tests/: live_infobase.rs  live_server.rs  params.toml  rac_wire_decode.rs
apps/rac_rest/: Cargo.toml
apps/rac_rest/src/: lib.rs  main.rs
artifacts/: agent_admin_list_client_to_server.decode.txt  agent_admin_list_codex_last.md  agent_admin_list_pipeline_state.json  agent_admin_list_server_to_client.decode.txt  counter_accumulated_values_codex_tmp_pipeline_state.json  counter_accumulated_values_codex_tmp_response.hex  counter_accumulated_values_codex_tmp_server_to_client.decode.txt  counter_clear_codex_tmp_client_to_server.decode.txt  counter_clear_codex_tmp_pipeline_state.json  counter_clear_codex_tmp_server_to_client.decode.txt  counter_info_codex_tmp_pipeline_state.json  counter_info_codex_tmp_rac.out  counter_info_codex_tmp_response.hex  counter_info_codex_tmp_server_to_client.decode.txt  counter_list_client_to_server.decode.txt  counter_list_rac.out  (+78 more)
(+764 files in other folders)
