[package]
name = "rac_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", optional = true }
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }

[features]
debug-parse = ["log"]

[dev-dependencies]
hex = "0.4"
