[package]
name = "rac_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["trace"], optional = true }

[features]
debug-parse = ["log"]
rest = ["axum", "tokio", "tower", "tower-http"]

[[bin]]
name = "rac_rest"
path = "src/bin/rac_rest.rs"
required-features = ["rest"]

[dev-dependencies]
hex = "0.4"
