[package]
name = "rac_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = { version = "0.4", optional = true }

[features]
debug-parse = ["log"]
artifacts = []
live-tests = []

[dev-dependencies]
hex = "0.4"
